--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.38_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.38_translation-de-sabbamitta.json
@@ -63,5 +63,5 @@
   "sn22.38:7.6": "Bewusstsein geboren und erschienen ist, ",
   "sn22.38:7.7": "sind sein Entstehen, sein Verschwinden und eine Veränderung während seines Bestehens erkennbar. ",
   "sn22.38:7.8": "Das sind die Dinge, bei denen das Entstehen, das Verschwinden und eine Veränderung während des Bestehens erkennbar sind. ",
-  "sn22.38:7.9": "So solltest du eine solche Frage beantworten.“ "
+  "sn22.38:7.9": "So sollst du eine solche Frage beantworten.“ "
 }
