--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.37_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.37_translation-de-sabbamitta.json
@@ -9,7 +9,7 @@
   "sn22.37:2.2": "‚Geehrter Ānanda, was sind die Dinge, bei denen das Entstehen, das Verschwinden und eine Veränderung während des Bestehens erkennbar sind?‘ ",
   "sn22.37:2.3": "Wie würdest du antworten?“ ",
   "sn22.37:2.4": "„Herr, angenommen, ich würde gefragt: ",
-  "sn22.37:2.5": "‚Was sind die Dinge, bei denen man das Entstehen sieht, das Verschwinden sieht und sieht, dass sie sich ändern, während sie bestehen?‘, ",
+  "sn22.37:2.5": "‚Was sind die Dinge, bei denen das Entstehen, das Verschwinden und eine Veränderung während des Bestehens erkennbar sind?‘, ",
   "sn22.37:2.6": "dann würde ich so antworten: ",
   "sn22.37:2.7": "‚Geehrter, man sieht das Entstehen von Form, man sieht ihr Verschwinden und man sieht, dass sie sich ändert, während sie besteht. ",
   "sn22.37:2.8": "Man sieht das Entstehen von Gefühl … ",
