Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.37_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.37_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.37_translation-de-sabbamitta.json
@@ -12,7 +12,7 @@
   "sn22.37:2.5": "‚Was sind die Dinge, bei denen das Entstehen, das Verschwinden und eine Veränderung während des Bestehens erkennbar sind?‘, ",
   "sn22.37:2.6": "dann würde ich so antworten: ",
   "sn22.37:2.7": "‚Geehrter, das Entstehen von Form ist erkennbar, ihr Verschwinden ist erkennbar und eine Veränderung während ihres Bestehens ist erkennbar. ",
-  "sn22.37:2.8": "Man sieht das Entstehen von Gefühl … ",
+  "sn22.37:2.8": "Das Entstehen von Gefühl ist erkennbar … ",
   "sn22.37:2.9": "von Wahrnehmung … ",
   "sn22.37:2.10": "von Willensbildungsprozessen … ",
   "sn22.37:2.11": "von Bewusstsein, man sieht sein Verschwinden und man sieht, dass es sich ändert, während es besteht. ",
