--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.37_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.37_translation-de-sabbamitta.json
@@ -15,7 +15,7 @@
   "sn22.37:2.8": "Das Entstehen von Gefühl ist erkennbar … ",
   "sn22.37:2.9": "Das Entstehen von Wahrnehmung ist erkennbar … ",
   "sn22.37:2.10": "Das Entstehen von Willensbildungsprozessen ist erkennbar … ",
-  "sn22.37:2.11": "von Bewusstsein, man sieht sein Verschwinden und man sieht, dass es sich ändert, während es besteht. ",
+  "sn22.37:2.11": "Das Entstehen von Bewusstsein ist erkennbar, sein Verschwinden ist erkennbar und eine Veränderung während seines Bestehens ist erkennbar. ",
   "sn22.37:2.12": "Das sind die Dinge, bei denen man das Entstehen sieht, das Verschwinden sieht und sieht, dass sie sich ändern, während sie bestehen.‘ ",
   "sn22.37:2.13": "So würde ich eine solche Frage beantworten.“ ",
   "sn22.37:3.1": "„Gut, gut, Ānanda! ",
