Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.37_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.37_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.37_translation-de-sabbamitta.json
@@ -19,7 +19,7 @@
   "sn22.37:2.12": "Das sind die Dinge, bei denen das Entstehen, das Verschwinden und eine Veränderung während des Bestehens erkennbar sind.‘ ",
   "sn22.37:2.13": "So würde ich eine solche Frage beantworten.“ ",
   "sn22.37:3.1": "„Gut, gut, Ānanda! ",
-  "sn22.37:3.2": "Man sieht das Entstehen von Form, man sieht ihr Verschwinden und man sieht, dass sie sich ändert, während sie besteht. ",
+  "sn22.37:3.2": "‚Das Entstehen von Form ist erkennbar, ihr Verschwinden ist erkennbar und eine Veränderung während ihres Bestehens ist erkennbar. ",
   "sn22.37:3.3": "Man sieht das Entstehen von Gefühl … ",
   "sn22.37:3.4": "von Wahrnehmung … ",
   "sn22.37:3.5": "von Willensbildungsprozessen … ",
