Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.37_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.37_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.37_translation-de-sabbamitta.json
@@ -21,7 +21,7 @@
   "sn22.37:3.1": "„Gut, gut, Ānanda! ",
   "sn22.37:3.2": "‚Das Entstehen von Form ist erkennbar, ihr Verschwinden ist erkennbar und eine Veränderung während ihres Bestehens ist erkennbar. ",
   "sn22.37:3.3": "Das Entstehen von Gefühl ist erkennbar … ",
-  "sn22.37:3.4": "von Wahrnehmung … ",
+  "sn22.37:3.4": "Das Entstehen von Wahrnehmung ist erkennbar … ",
   "sn22.37:3.5": "von Willensbildungsprozessen … ",
   "sn22.37:3.6": "von Bewusstsein, man sieht sein Verschwinden und man sieht, dass es sich ändert, während es besteht. ",
   "sn22.37:3.7": "Das sind die Dinge, bei denen man das Entstehen sieht, das Verschwinden sieht und sieht, dass sie sich ändern, während sie bestehen. ",
