--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.37_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.37_translation-de-sabbamitta.json
@@ -23,7 +23,7 @@
   "sn22.37:3.3": "Das Entstehen von Gefühl ist erkennbar … ",
   "sn22.37:3.4": "Das Entstehen von Wahrnehmung ist erkennbar … ",
   "sn22.37:3.5": "Das Entstehen von Willensbildungsprozessen ist erkennbar … ",
-  "sn22.37:3.6": "von Bewusstsein, man sieht sein Verschwinden und man sieht, dass es sich ändert, während es besteht. ",
+  "sn22.37:3.6": "Das Entstehen von Bewusstsein ist erkennbar, sein Verschwinden ist erkennbar und eine Veränderung während seines Bestehens ist erkennbar. ",
   "sn22.37:3.7": "Das sind die Dinge, bei denen man das Entstehen sieht, das Verschwinden sieht und sieht, dass sie sich ändern, während sie bestehen. ",
   "sn22.37:3.8": "So solltest du eine solche Frage beantworten.“ "
 }
