--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.37_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.37_translation-de-sabbamitta.json
@@ -25,5 +25,5 @@
   "sn22.37:3.5": "Das Entstehen von Willensbildungsprozessen ist erkennbar … ",
   "sn22.37:3.6": "Das Entstehen von Bewusstsein ist erkennbar, sein Verschwinden ist erkennbar und eine Veränderung während seines Bestehens ist erkennbar. ",
   "sn22.37:3.7": "Das sind die Dinge, bei denen das Entstehen, das Verschwinden und eine Veränderung während des Bestehens erkennbar sind. ",
-  "sn22.37:3.8": "So solltest du eine solche Frage beantworten.“ "
+  "sn22.37:3.8": "So sollst du eine solche Frage beantworten.“ "
 }
