--- a/translation/it/soma/sutta/kn/iti/vagga9/iti84_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti84_translation-it-soma.json
@@ -7,7 +7,7 @@
   "iti84:3.1": "Il secondo è un discepolo del maestro che è un arahant, che ha distrutto ogni compulsione (āsava), si è realizzato, ha fatto quello che doveva fare, ha posato il fardello, ha raggiunto il traguardo più benefico, ha reciso le catene dell’esistenza, si è liberato grazie alla corretta comprensione. *** ",
   "iti84:3.2": "",
   "iti84:3.3": "",
-  "iti84:4.1": "Quando c’è invece un discepolo di quel maestro: un apprendista ancora in cammino, molto istruito, che segue precetti e osservanze. ",
+  "iti84:4.1": "",
   "iti84:4.2": "Insegna un Dhamma che è bello all’inizio, durante e dopo, sia nel significato che nella forma e rivela un tipo di vita religiosa completamente perfetta e pura. ** ",
   "iti84:4.3": "Questo è il terzo tipo di persona che appare nel mondo per il giovamento, l’agio, la compassione, la fortuna, il beneficio e la felicità di molte creature umane e divine.** ",
   "iti84:5.1": "“Il primo maestro nel mondo è il grande rishi, ",
