--- a/translation/de/sabbamitta/sutta/an/an3/an3.47_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.47_translation-de-sabbamitta.json
@@ -4,7 +4,7 @@
   "an3.47:0.3": "Kennzeichen des Bedingten ",
   "an3.47:1.1": "„Mönche und Nonnen, das Bedingte hat drei Kennzeichen. ",
   "an3.47:1.2": "Welche drei? ",
-  "an3.47:1.3": "Man sieht ihr Entstehen, man sieht ihr Verschwinden und man sieht, dass sie sich ändern, während sie bestehen. ",
+  "an3.47:1.3": "Entstehen ist erkennbar, Verschwinden ist erkennbar und eine Veränderung während des Bestehens ist erkennbar. ",
   "an3.47:1.4": "Das sind die drei Kennzeichen des Bedingten.“ ",
   "an3.47:1.5": " ",
   "an3.47:2.0": "Kennzeichen des Unbedingten ",
