--- a/translation/de/sabbamitta/sutta/an/an3/an3.47_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.47_translation-de-sabbamitta.json
@@ -10,6 +10,6 @@
   "an3.47:2.0": "Kennzeichen des Unbedingten ",
   "an3.47:2.1": "„Das Unbedingte hat drei Kennzeichen. ",
   "an3.47:2.2": "Welche drei? ",
-  "an3.47:2.3": "Man sieht kein Entstehen, man sieht kein Verschwinden und man sieht nicht, dass sie sich ändern, während sie bestehen. ",
+  "an3.47:2.3": "Kein Entstehen ist erkennbar, kein Verschwinden ist erkennbar und keine Veränderung während des Bestehens ist erkennbar. ",
   "an3.47:2.4": "Das sind die drei Kennzeichen des Unbedingten.“ "
 }
