Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga9/iti84_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga9/iti84_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti84_translation-it-soma.json
@@ -18,7 +18,7 @@
   "iti84:6.2": "apportatori di luce, divulgano il Dhamma ",
   "iti84:6.3": "e aprono le porte al senza morte, ",
   "iti84:6.4": "affrancando* molta gente** dal giogo. ",
-  "iti84:7.1": "Quelli che grazie a una eccezionale guida ",
+  "iti84:7.1": "Quelli che grazie alla suprema guida ",
   "iti84:7.2": "seguono la via ben indicata, ",
   "iti84:7.3": "ottengono così la fine della sofferenza, ",
   "iti84:7.4": "quelli solerti nel insegnamento del Fortunato.” "
