--- a/translation/it/soma/sutta/kn/iti/vagga9/iti84_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti84_translation-it-soma.json
@@ -21,5 +21,5 @@
   "iti84:7.1": "Quelli che grazie alla suprema guida ",
   "iti84:7.2": "seguono la via ben indicata, ",
   "iti84:7.3": "ottengono in questa vita la fine della sofferenza, ",
-  "iti84:7.4": "quelli solerti nel insegnamento del Fortunato.” "
+  "iti84:7.4": "solerti nell’insegnamento del Fortunato.” "
 }
