--- a/translation/it/soma/sutta/kn/iti/vagga6/iti53_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga6/iti53_translation-it-soma.json
@@ -14,5 +14,5 @@
   "iti53:4.1": "vedendo davvero correttamente (nel modo giusto), ",
   "iti53:4.2": "in questo modo si libera. ",
   "iti53:4.3": "Questo è un saggio (muni), un placido padrone della conoscenza superiore, ",
-  "iti53:4.4": "che è andato oltre le catene. "
+  "iti53:4.4": "che è andato oltre il giogo. "
 }
