--- a/translation/it/soma/sutta/kn/iti/vagga9/iti85_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti85_translation-it-soma.json
@@ -12,5 +12,5 @@
   "iti85:4.1": "vede nel modo giusto * e ",
   "iti85:4.2": "in questo modo si libera. ",
   "iti85:4.3": "Questo è un saggio che ha ottenuto la perfetta conoscenza, in pace,* ",
-  "iti85:4.4": "che è andato oltre le catene. * "
+  "iti85:4.4": "che è andato oltre il giogo. * "
 }
