--- a/translation/it/soma/sutta/kn/iti/vagga9/iti85_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti85_translation-it-soma.json
@@ -11,6 +11,6 @@
   "iti85:3.4": "che trova, ",
   "iti85:4.1": "vede nel modo giusto (correttamente)* e ",
   "iti85:4.2": "in questo modo si libera. ",
-  "iti85:4.3": "Questo è un saggio che ha ottenuto la perfetta conoscenza, in pace,* ",
+  "iti85:4.3": "Questo è un sapiente (muni) che ha ottenuto la perfetta conoscenza, in pace,* ",
   "iti85:4.4": "che è andato oltre il giogo. * "
 }
