--- a/translation/it/soma/sutta/kn/iti/vagga9/iti85_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti85_translation-it-soma.json
@@ -1,6 +1,6 @@
 {
   "iti85:2.1": "Cercatori, meditate contemplando il non bello nel corpo. ",
-  "iti85:2.2": "Lasciate prima di tutto che la consapevolezza del respiro sia ben consolidata internamente, ",
+  "iti85:2.2": "Lasciate prima di tutto che la consapevolezza del respiro sia ben consolidata internamente ",
   "iti85:2.3": "e poi meditate osservando  l’impermanenza di ogni dinamica. ",
   "iti85:2.4": "Se si contempla il non bello nel corpo, qualunque tendenza latente verso la passione per quello che è bello, viene abbandonata. ",
   "iti85:2.5": "Se la consapevolezza del respiro sarà prima di tutto ben consolidata internamente, qualsiasi disposizione al pensare o avversione a cose esterne cesserà di esistere. ",
