--- a/translation/it/giovannizappa/sutta/mn/mn104_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn104_translation-it-giovannizappa.json
@@ -109,7 +109,7 @@
   "mn104:19.7": "‘Sicuramente il venerabile ricorda se ha compiuto un tipo di offesa seria la cui pena è l’espulsione o quasi!’ ",
   "mn104:19.8": "Lui dice: ",
   "mn104:19.9": "‘Fratelli, non ricordo di aver commesso un’offesa di quel genere. ",
-  "mn104:19.10": "Ma ricordo di aver commesso un offesa leggera’. ",
+  "mn104:19.10": "Ma ricordo di aver commesso un’offesa leggera’. ",
   "mn104:19.11": "Ma anche se lui cerca di dileguarsi, i monaci perseguono la questione: ",
   "mn104:19.12": "‘Sicuramente il venerabile si ricorda benissimo se ha compiuto un tipo di offesa seria la cui pena è l’espulsione o quasi!’ ",
   "mn104:19.13": "Lui dice: ",
