Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn104_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn104_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn104_translation-it-giovannizappa.json
@@ -137,7 +137,7 @@
   "mn104:20.11": "Se alla comunità va bene, allora, a beneficio mio e di questi venerabili, rivelo nel mezzo della comunità sorvolando, come se si coprisse qualcosa con del fieno, qualsiasi offesa commessa da quei venerabili e da me, eccetto quelle gravi e quelle relative ai laici’. ",
   "mn104:20.12": "Questo è il sorvolare come se si coprisse qualcosa con del fieno. Ed è così che certi procedimenti disciplinari vengono risolti, vale a dire, ",
   "mn104:20.13": "sorvolando come se si coprisse qualcosa con del fieno. ",
-  "mn104:21.1": "“Ānanda, queste sei qualità di buon cuore portano ad affetto e rispetto, conducono all’inclusione, all’armonia, all’unità, senza litigi. ",
+  "mn104:21.1": "Ānanda, queste sei qualità di buon cuore portano ad affetto e rispetto, conducono all’inclusione, all’armonia, all’unità, senza litigi. ",
   "mn104:21.2": "Quali sei? ",
   "mn104:21.3": "Primo, un monaco tratta costantemente i suoi compagni spirituali con gentilezza attraverso corpo, sia in pubblico che in privato. ",
   "mn104:21.4": "Questa qualità di buon cuore porta ad affetto e rispetto, conduce all’inclusione, all’armonia, all’unità, senza litigi. ",
