--- a/translation/it/soma/sutta/kn/iti/vagga8/iti78_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti78_translation-it-soma.json
@@ -1,5 +1,5 @@
 {
-  "iti78:2.1": "Le creature confluiscono e si uniscono con altre creature per via di un elemento. ",
+  "iti78:2.1": "Le creature confluiscono e si uniscono con altre creature per via di un elemento (caratteristica / aspetto). ",
   "iti78:2.2": "Le creature propense al male confluiscono e si uniscono con altre propense al male. ",
   "iti78:2.3": "Le creature propense al bene confluiscono e si uniscono con altre propense al bene. ",
   "iti78:3.1": "Come hanno fatto in passato, ",
