--- a/translation/it/giovannizappa/sutta/mn/mn105_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn105_translation-it-giovannizappa.json
@@ -36,7 +36,7 @@
   "mn105:8.2": "Un individuo così partecipa a conversazioni di quel tipo, pensando e valutando in linea con quello. Frequenta quel tipo di persone, e lo trova piacevole. ",
   "mn105:8.3": "Ma quando sente una conversazione riguardo all’imperturbabile, non vuole ascoltare. Non ascolta attivamente né prova a comprendere. Non frequenta quel tipo di persone, e non lo trova piacevole. ",
   "mn105:9.1": "Immagina una persona che ha lasciato il proprio villaggio o cittadina molto tempo fa ",
-  "mn105:9.2": "che vede un altra persona che ci è appena stata. ",
+  "mn105:9.2": "che vede un’altra persona che ci è appena stata. ",
   "mn105:9.3": "Gli chiederebbe se il villaggio è al sicuro, con abbondanza di cibo e poche malattie, ",
   "mn105:9.4": "e l’altra persona gli racconterebbe le ultime notizie. ",
   "mn105:9.5": "Cosa ne pensi, Sunakkhatta? ",
