--- a/translation/it/giovannizappa/sutta/mn/mn105_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn105_translation-it-giovannizappa.json
@@ -60,7 +60,7 @@
   "mn105:13.1": "Immagina una grossa roccia che viene spaccata a metà, così da non poter essere rimessa insieme. ",
   "mn105:13.2": "Allo stesso modo, un individuo concentrato sulla dimensione del nulla ha tagliato il legame all’imperturbabile. ",
   "mn105:13.3": "Devi sapere di lui: ",
-  "mn105:13.4": "‘Quell’individuo è concentrato sulla dimensione del nulla, poiché è distaccato da ciò che è legato all’imperturbabile’. ",
+  "mn105:13.4": "‘Quell’individuo è concentrato sulla dimensione del nulla, poiché è distaccato da ciò che è collegato all’imperturbabile’. ",
   "mn105:14.1": "È possibile che un qualche individuo sia concentrato sulla dimensione della né percezione né non-percezione. ",
   "mn105:14.2": "Un individuo così partecipa a conversazioni di quel tipo, pensando e valutando in linea con quello. Frequenta quel tipo di persone, e lo trova piacevole. ",
   "mn105:14.3": "Ma quando sente una conversazione riguardo alla dimensione del nulla, non vuole ascoltare. Non ascolta attivamente né prova a comprendere. Non frequenta quel tipo di persone, e non lo trova piacevole. ",
