--- a/translation/it/giovannizappa/sutta/mn/mn105_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn105_translation-it-giovannizappa.json
@@ -79,7 +79,7 @@
   "mn105:17.1": "Immagina una palma con la corona tagliata. È incapace di ulteriore crescita. ",
   "mn105:17.2": "“Allo stesso modo, un individuo concentrato sull’estinzione ha tagliato il legame alla dimensione della né percezione né non-percezione alla radice, l’ha reso come un ceppo di palma, obliterato, in modo che non sia in grado di sorgere in futuro. ",
   "mn105:17.3": "Devi sapere di lui: ",
-  "mn105:17.4": "‘Quell’individuo è giustamente concentrato sull’estinzione poiché è distaccato da ciò che è legato alla dimensione della né percezione né non-percezione’. ",
+  "mn105:17.4": "‘Quell’individuo è giustamente concentrato sull’estinzione poiché è distaccato da ciò che è collegato alla dimensione della né percezione né non-percezione’. ",
   "mn105:18.1": "È possibile che un certo monaco pensi: ",
   "mn105:18.2": "‘L’Asceta ha detto che la sete è un dardo; e che il veleno dell’ignoranza viene inflitto da desiderio e cattiveria. ",
   "mn105:18.3": "Ho abbandonato il dardo della sete e rimosso il veleno dell’ignoranza; sono giustamente concentrato sull’estinzione’. ",
