--- a/translation/it/soma/sutta/kn/iti/vagga8/iti78_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti78_translation-it-soma.json
@@ -14,7 +14,7 @@
   "iti78:7.1": "allo stesso modo se uno si circonda di persone indolenti, ",
   "iti78:7.2": "anche se vive una vita morale, cadrebbe giù (affonderebbe). ",
   "iti78:7.3": "Per quello si dovrebbero evitare ",
-  "iti78:7.4": "indolenza e debolezza. ",
+  "iti78:7.4": "indolenza e inerzia. ",
   "iti78:8.1": "In solitudine come gli Arahant, ",
   "iti78:8.2": "resoluti come i praticanti del Jhāna, ",
   "iti78:8.3": "sempre strenui, ",
