--- a/translation/it/soma/sutta/kn/iti/vagga8/iti78_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti78_translation-it-soma.json
@@ -15,7 +15,7 @@
   "iti78:7.2": "anche se vive una vita morale, cadrebbe giù (affonderebbe). ",
   "iti78:7.3": "Per quello si dovrebbero evitare ",
   "iti78:7.4": "indolenza e inerzia. ",
-  "iti78:8.1": "In solitudine come le nobili persone, ",
+  "iti78:8.1": "In solitudine con le nobili persone, ",
   "iti78:8.2": "resoluti come i praticanti del Jhāna, ",
   "iti78:8.3": "sempre strenui, ",
   "iti78:8.4": "si dovrebbe vivere insieme ai saggi. "
