--- a/translation/it/soma/sutta/kn/iti/vagga8/iti78_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti78_translation-it-soma.json
@@ -18,5 +18,5 @@
   "iti78:8.1": "Si dovrebbe vivere insieme ai saggi, ",
   "iti78:8.2": "ai solitari, alle nobili persone, ",
   "iti78:8.3": "resoluti come i praticanti del Jhāna, ",
-  "iti78:8.4": "si dovrebbe vivere insieme ai saggi. "
+  "iti78:8.4": "a quelli sempre strenui. "
 }
