--- a/translation/it/soma/sutta/kn/iti/vagga8/iti78_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti78_translation-it-soma.json
@@ -17,6 +17,6 @@
   "iti78:7.4": "indolenza e inerzia. ",
   "iti78:8.1": "Si dovrebbe vivere insieme ai saggi, ",
   "iti78:8.2": "ai solitari, alle nobili persone, ",
-  "iti78:8.3": "resoluti come i praticanti del Jhāna, ",
+  "iti78:8.3": "a quelli resoluti, ai praticanti del Jhāna, ",
   "iti78:8.4": "a quelli sempre strenui. "
 }
