--- a/translation/it/soma/sutta/kn/iti/vagga8/iti78_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti78_translation-it-soma.json
@@ -15,7 +15,7 @@
   "iti78:7.2": "anche se vive una vita morale, cadrebbe giù (affonderebbe). ",
   "iti78:7.3": "Per quello si dovrebbero evitare ",
   "iti78:7.4": "indolenza e inerzia. ",
-  "iti78:8.1": "Si dovrebbe vivere insieme ai saggi, ",
+  "iti78:8.1": "Si dovrebbe vivere insieme alle nobili persone, ",
   "iti78:8.2": "ai solitari, alle nobili persone, ",
   "iti78:8.3": "a quelli resoluti, ai praticanti del Jhāna, ",
   "iti78:8.4": "a quelli sempre strenui. "
