Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga8/iti78_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga8/iti78_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti78_translation-it-soma.json
@@ -16,7 +16,7 @@
   "iti78:7.3": "Per quello si dovrebbero evitare ",
   "iti78:7.4": "indolenza e inerzia. ",
   "iti78:8.1": "Si dovrebbe vivere insieme alle nobili persone, solitarie, ",
-  "iti78:8.2": "ai solitari, alle nobili persone, ",
+  "iti78:8.2": "resolute, praticanti del Jhāna, ",
   "iti78:8.3": "a quelli resoluti, ai praticanti del Jhāna, ",
   "iti78:8.4": "a quelli sempre strenui. "
 }
