Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga8/iti78_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga8/iti78_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti78_translation-it-soma.json
@@ -17,6 +17,6 @@
   "iti78:7.4": "indolenza e inerzia. ",
   "iti78:8.1": "Si dovrebbe vivere insieme alle nobili persone, solitarie, ",
   "iti78:8.2": "resolute, praticanti del Jhāna, ",
-  "iti78:8.3": "sempre strenui, ",
+  "iti78:8.3": "sempre strenue, ",
   "iti78:8.4": "saggi. "
 }
