Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an3/an3.50_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an3/an3.50_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.50_translation-de-sabbamitta.json
@@ -9,7 +9,7 @@
   "an3.50:1.5": "Da setzt ein Meisterdieb auf unzugängliche Flussauen oder schroffe Berglandschaften. ",
   "an3.50:1.6": "So setzt ein Meisterdieb auf unebenes Gelände. ",
   "an3.50:2.1": "Und wie setzt ein Meisterdieb auf gute Deckung? ",
-  "an3.50:2.2": "Da setzt ein Meisterdieb auf dichtes Gras, dicke Bäume, eine Erhebung oder ein großes Waldstück. ",
+  "an3.50:2.2": "Da setzt ein Meisterdieb auf dichtes Gras, dicke Bäume, dichtes Gestrüpp oder ein großes Waldstück. ",
   "an3.50:2.3": "So setzt ein Meisterdieb auf gute Deckung. ",
   "an3.50:3.1": "Und wie setzt ein Meisterdieb auf einflussreiche Menschen? ",
   "an3.50:3.2": "Da setzt ein Meisterdieb auf Herrscher oder königliche Oberminister. ",
