Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an5/an5.103_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an5/an5.103_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.103_translation-de-sabbamitta.json
@@ -9,7 +9,7 @@
   "an5.103:2.2": "Da setzt ein Meisterdieb auf unzugängliche Flussauen oder schroffe Berglandschaften. ",
   "an5.103:2.3": "So setzt ein Meisterdieb auf unebenes Gelände. ",
   "an5.103:3.1": "Und wie setzt ein Meisterdieb auf gute Deckung? ",
-  "an5.103:3.2": "Da setzt ein Meisterdieb auf dichtes Gras, dicke Bäume, eine Erhebung oder ein großes Waldstück. ",
+  "an5.103:3.2": "Da setzt ein Meisterdieb auf dichtes Gras, dicke Bäume, dichtes Gestrüpp oder ein großes Waldstück. ",
   "an5.103:3.3": "So setzt ein Meisterdieb auf gute Deckung. ",
   "an5.103:4.1": "Und wie setzt ein Meisterdieb auf einflussreiche Menschen? ",
   "an5.103:4.2": "Da setzt ein Meisterdieb auf Herrscher oder königliche Oberminister. ",
