Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an8/an8.11_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an8/an8.11_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an8/an8.11_translation-de-sabbamitta.json
@@ -68,7 +68,7 @@
   "an8.11:11.2": "und sie hätte richtig darauf gesessen, sie warm gehalten und bebrütet. ",
   "an8.11:11.3": "Das Küken, das als erstes mit seinen Klauen und dem Schnabel die Eierschale durchbricht und sicher schlüpft: Sollte es das älteste oder das jüngste genannt werden?“ ",
   "an8.11:11.4": "„Herr Gotama, es sollte das älteste genannt werden. Denn es ist das älteste unter ihnen.“ ",
-  "an8.11:12.1": "„Ebenso habe ich in dieser Gesellschaft, die in der Unwissenheit verloren und in ihren Schalen gefangen ist, als Einziger das Ei der Unwissenheit durchbrochen und das unübertreffliche vollkommene Erwachen verwirklicht. ",
+  "an8.11:12.1": "„Ebenso habe ich in dieser Gesellschaft, die in der Unwissenheit verloren ist, wie ein Ei in der Schale eingeschlossen, als Einziger das Ei der Unwissenheit durchbrochen und das unübertreffliche vollkommene Erwachen verwirklicht. ",
   "an8.11:12.2": "Daher, Brahmane, bin ich der Älteste und der Erste in der Welt. ",
   "an8.11:13.1": "Meine Energie war aufgerüttelt und unermüdlich, die Achtsamkeit fest verankert und klar, mein Körper war still und nicht erregt und mein Geist im Samādhi versunken. ",
   "an8.11:13.2": "Ganz abgeschieden von den Sinnenfreuden, abgeschieden von untauglichen Eigenschaften, trat ich in die erste Vertiefung ein und verweilte darin; da gibt es aus Abgeschiedenheit geborene Ekstase und Seligkeit, während man den Geist ausrichtet und hält. ",
