--- a/translation/it/soma/sutta/kn/iti/vagga7/iti62_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti62_translation-it-soma.json
@@ -10,7 +10,7 @@
   "iti62:4.3": "‘la mia liberazione è inalterabile (irremovibile).’ ",
   "iti62:4.4": "Grazie all’eliminazione delle catene all’esistenza, ",
   "iti62:5.1": "perfezionate le sue facoltà, ",
-  "iti62:5.2": "placido si delizia nello stato di placidità, ",
+  "iti62:5.2": "sereno si delizia nello stato di placidità, ",
   "iti62:5.3": "indossa il suo ultimo corpo, ",
   "iti62:5.4": "dopo aver sconfitto Māra e il suo esercito.” "
 }
