--- a/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti112_translation-it-soma.json
@@ -37,7 +37,7 @@
   "iti112:11.3": "vanno insieme a rendere omaggio a lui ",
   "iti112:11.4": "e alla sua grande maestria. ",
   "iti112:12.1": "Domato lui stesso, è il migliore domatore; ",
-  "iti112:12.2": "il placido saggio che aiuta a placare, ",
+  "iti112:12.2": "il sereno saggio che aiuta a placare, ",
   "iti112:12.3": "libero, è il supremo liberatore, ",
   "iti112:12.4": "andato oltre (ha attraversato), è eccellente e aiuta a traversare. ",
   "iti112:13.1": "Per quello rendono omaggio a lui* ",
