--- a/translation/de/sabbamitta/sutta/sn/sn2/sn2.26_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn2/sn2.26_translation-de-sabbamitta.json
@@ -26,5 +26,5 @@
   "sn2.26:7.1": "Daher hat ein verständiger Mensch, der die Welt kennt, ",
   "sn2.26:7.2": "das geistliche Leben erfüllt, ist ans Ende der Welt gelangt. ",
   "sn2.26:7.3": "Ein Beruhigter, der das Ende der Welt kennt, ",
-  "sn2.26:7.4": "verlangt weder nach dieser noch jener Welt.“ "
+  "sn2.26:7.4": "hofft weder auf diese noch auf jene Welt.“ "
 }
