--- a/translation/it/soma/sutta/kn/iti/vagga6/iti53_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga6/iti53_translation-it-soma.json
@@ -9,7 +9,7 @@
   "iti53:2.8": "quello è chiamato ‘un cercatore nobile, che vede correttamente (nel modo giusto), che ha completamente reciso la sete, slegato le catene, che con la completa comprensione della presunzione (māna) ha portato a termine la sofferenza. ",
   "iti53:3.1": "Il cercatore che vede il piacevole come doloroso, ",
   "iti53:3.2": "il doloroso come una coltellata ",
-  "iti53:3.3": "e quel placido neutro ",
+  "iti53:3.3": "e quel sereno neutro ",
   "iti53:3.4": "come impermanente, ",
   "iti53:4.1": "vedendo davvero correttamente (nel modo giusto), ",
   "iti53:4.2": "in questo modo si libera. ",
