Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga9/iti87_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga9/iti87_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti87_translation-it-soma.json
@@ -14,5 +14,5 @@
   "iti87:4.3": "Dopo averli vagliati, uno calma i propri pensieri ",
   "iti87:4.4": "come una nube di polvere viene depositata al suolo dall’acqua. ",
   "iti87:4.5": "Quando si calmano i pensieri intenzionalmente, ",
-  "iti87:4.6": "si ottiene così lo stato di placidità (pace).” "
+  "iti87:4.6": "si ottiene così lo stato di serenità (pace).” "
 }
