--- a/translation/it/soma/sutta/kn/thig/thig3.2_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/thig/thig3.2_translation-it-soma.json
@@ -4,7 +4,7 @@
   "thig3.2:0.3": "Canto dell’Anziana Uttamā ",
   "thig3.2:1.1": "“Quattro volte, cinque volte, ",
   "thig3.2:1.2": "uscii fuori. ",
-  "thig3.2:1.3": "La mia mente non trovava pace, ",
+  "thig3.2:1.3": "La mia mente non trovava serenità, ",
   "thig3.2:1.4": "era fuori dal mio controllo. ",
   "thig3.2:2.1": "Approcciai una bhikkhunī ",
   "thig3.2:2.2": "che mi ispirava fiducia. ",
