--- a/translation/it/soma/sutta/kn/thig/thig7.3_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/thig/thig7.3_translation-it-soma.json
@@ -4,7 +4,7 @@
   "thig7.3:0.3": "Canto dell’Anziana Upacālā ",
   "thig7.3:1.1": "“Sono consapevole e vedo chiaramente (di chiara visione?), ",
   "thig7.3:1.2": "è una monaca dalle facoltà sviluppate. ",
-  "thig7.3:1.3": "Ho dominato(?) il sentiero della pace, ",
+  "thig7.3:1.3": "Ho dominato(?) il sentiero della serenità, ",
   "thig7.3:1.4": "che non è praticato da persone vili”. ",
   "thig7.3:2.1": "“Perchè non apprezzi essere nata? ",
   "thig7.3:2.2": "Quando uno nasce, uno gode dei piaceri dei sensi. ",
