--- a/translation/it/soma/sutta/kn/thig/thig5.4_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/thig/thig5.4_translation-it-soma.json
@@ -21,6 +21,6 @@
   "thig5.4:5.1": "Così diventai disincantata dal corpo ",
   "thig5.4:5.2": "e spassionata internamente. ",
   "thig5.4:5.3": "Ora, solerte e senza gioghi, ",
-  "thig5.4:5.4": "sono appagata e in pace.” ",
+  "thig5.4:5.4": "sono appagata e serena.” ",
   "thig5.4:6.1": "L’Anziana Sundarinandā "
 }
