--- a/translation/it/soma/sutta/kn/thig/thig7.2_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/thig/thig7.2_translation-it-soma.json
@@ -4,7 +4,7 @@
   "thig7.2:0.3": "Canto dell’Anziana Cālā ",
   "thig7.2:1.1": "“Sono una bhikkhunī dalle facoltà sviluppate, ",
   "thig7.2:1.2": "ho stabilito(?) la consapevolezza ",
-  "thig7.2:1.3": "e dominato(?) il sentiero della pace, ",
+  "thig7.2:1.3": "e dominato(?) il sentiero della serenità, ",
   "thig7.2:1.4": "gioiosa requie delle formazioni.” ",
   "thig7.2:2.1": "“Per conto di chi ti sei rasa la testa? ",
   "thig7.2:2.2": "Sembri una contemplativa/asceta, ",
