--- a/translation/it/soma/sutta/kn/thig/thig5.1_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/thig/thig5.1_translation-it-soma.json
@@ -6,7 +6,7 @@
   "thig5.1:1.2": "da quando rinunciai al mondo ",
   "thig5.1:1.3": "non trovai serenità mentale ",
   "thig5.1:1.4": "nemmeno per un secondo. ",
-  "thig5.1:2.1": "La mia mente non trovava pace, ",
+  "thig5.1:2.1": "La mia mente non trovava serenità, ",
   "thig5.1:2.2": "traboccava di avidità. ",
   "thig5.1:2.3": "Entrai nel monastero ",
   "thig5.1:2.4": "con le braccia in alto, urlando a squarcia gola. ",
