Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga4/iti37_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga4/iti37_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga4/iti37_translation-it-soma.json
@@ -7,7 +7,7 @@
   "iti37:3.3": "quel cercatore ardente e avveduto ",
   "iti37:3.4": "riflette con saggezza. ",
   "iti37:4.1": "Uno che vive così, ardente, ",
-  "iti37:4.2": "in pace, non agitato, ",
+  "iti37:4.2": "in serenità, non agitato, ",
   "iti37:4.3": "dedito alla tranquillità del cuore, ",
   "iti37:4.4": "raggiunge la distruzione della sofferenza.” [check Pāpune in other suttas / optative like raggiungerebbe] "
 }
