--- a/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti111_translation-it-soma.json
@@ -12,7 +12,7 @@
   "iti111:9.3": "esaminando il Dhamma, ",
   "iti111:9.4": "l’ascesa e la caduta degli aggregati. ** ",
   "iti111:10.1": "Quindi, vivendo zelante ",
-  "iti111:10.2": "in pace, non arrogante ",
+  "iti111:10.2": "in serenità, non arrogante ",
   "iti111:10.3": "alla corretta tranquillità del cuore ",
   "iti111:10.4": "si allena sempre consapevole ",
   "iti111:10.5": "sempre determinato/resoluto ",
