--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.78_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.78_translation-de-sabbamitta.json
@@ -3,7 +3,7 @@
   "sn1.78:0.2": "8. Das Kapitel über das Einäschern ",
   "sn1.78:0.3": "Begehren ",
   "sn1.78:1.1": "„Was soll jemand, der das Gute begehrt, nicht hergeben? ",
-  "sn1.78:1.2": "Was sollte ein Sterblicher nicht zurückweisen? ",
+  "sn1.78:1.2": "Was soll ein Sterblicher nicht aufgeben? ",
   "sn1.78:1.3": "Was soll man herauslassen, wenn es gut ist, ",
   "sn1.78:1.4": "aber nicht, wenn es schlecht ist?“ ",
   "sn1.78:2.1": "„Ein Mann soll sich selbst nicht hergeben. ",
