--- a/translation/de/sabbamitta/sutta/sn/sn1/sn1.78_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn1/sn1.78_translation-de-sabbamitta.json
@@ -7,7 +7,7 @@
   "sn1.78:1.3": "Was soll man herauslassen, wenn es gut ist, ",
   "sn1.78:1.4": "aber nicht, wenn es schlecht ist?“ ",
   "sn1.78:2.1": "„Ein Mann soll sich selbst nicht hergeben. ",
-  "sn1.78:2.2": "Sich selbst sollte er nicht zurückweisen. ",
+  "sn1.78:2.2": "Sich selbst soll er nicht aufgeben. ",
   "sn1.78:2.3": "Sprache soll man herauslassen, wenn sie gut ist, ",
   "sn1.78:2.4": "aber nicht, wenn sie schlecht ist.“ "
 }
