Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/iti/vagga2/iti18_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/iti/vagga2/iti18_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/iti/vagga2/iti18_translation-de-sabbamitta.json
@@ -7,7 +7,7 @@
   "iti18:2.1": "„Ein Ding, Mönche und Nonnen, erscheint in der Welt zum Schaden und Unglück vieler Menschen, gegen das Volk, zum Unheil, Schaden und Leiden von Göttern und Menschen. ",
   "iti18:2.2": "Welches eine Ding? ",
   "iti18:2.3": "Eine Spaltung des Saṅgha. ",
-  "iti18:2.4": "Wenn der Saṅgha gespalten ist, streiten sie, beleidigen und blockieren einander und weisen sich gegenseitig zurück. ",
+  "iti18:2.4": "Wenn der Saṅgha gespalten ist, streiten sie, beleidigen und blockieren einander und geben einander auf. ",
   "iti18:2.5": "Das weckt keine Zuversicht bei denen mit mangelnder Zuversicht, und bei manchen Zuversichtlichen führt es dazu, dass sie ihre Meinung ändern.“ ",
   "iti18:2.6": "Der Buddha sprach diese Sache. ",
   "iti18:2.7": "Dazu wird gesagt: ",
