--- a/translation/it/soma/sutta/kn/iti/vagga9/iti85_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti85_translation-it-soma.json
@@ -6,7 +6,7 @@
   "iti85:2.5": "Se la consapevolezza del respiro sarà prima di tutto ben consolidata internamente, qualsiasi disposizione al pensare o avversione a cose esterne cesserà di esistere. ",
   "iti85:2.6": "Se si contempla l’impermanenza di ogni attività (condizione/dinamica), l’ignoranza viene abbandonata e la sapienza sorge. ",
   "iti85:3.1": "Un cercatore, che con continuo ardore (zelo) contempla il non bello nel corpo ",
-  "iti85:3.2": "e che raccolto nella respirazione ",
+  "iti85:3.2": "e che, raccolto nella respiro, ",
   "iti85:3.3": "tranquillizza tutte le attività (condizioni/dinamiche) ",
   "iti85:3.4": "che trova, ",
   "iti85:4.1": "vede nel modo giusto (correttamente)* ",
