--- a/translation/de/sabbamitta/sutta/kn/iti/vagga2/iti19_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/iti/vagga2/iti19_translation-de-sabbamitta.json
@@ -7,7 +7,7 @@
   "iti19:2.1": "„Ein Ding, Mönche und Nonnen, erscheint in der Welt zum Nutzen und Glück vieler Menschen, für das Volk, zum Segen, Nutzen und Glück von Göttern und Menschen. ",
   "iti19:2.2": "Welches eine Ding? ",
   "iti19:2.3": "Eintracht im Saṅgha. ",
-  "iti19:2.4": "Wenn der Saṅgha einträchtig ist, streiten sie nicht, beleidigen und blockieren einander nicht und weisen sich nicht gegenseitig zurück. ",
+  "iti19:2.4": "Wenn der Saṅgha einträchtig ist, streiten sie nicht, beleidigen und blockieren einander nicht und geben einander nicht auf. ",
   "iti19:2.5": "Das weckt Zuversicht bei denen mit mangelnder Zuversicht und stärkt die Zuversicht bei den Zuversichtlichen.“ ",
   "iti19:2.6": "Der Buddha sprach diese Sache. ",
   "iti19:2.7": "Dazu wird gesagt: ",
