Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/iti/vagga10/iti95_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/iti/vagga10/iti95_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/iti/vagga10/iti95_translation-de-sabbamitta.json
@@ -18,7 +18,7 @@
   "iti95:3.6": "aber entkommen dem Umherwandern nicht. ",
   "iti95:4.1": "Wenn er diese Gefahr des Schwelgens in Sinnenfreuden erkennt, ",
   "iti95:4.2": "würde ein kluger Mensch ",
-  "iti95:4.3": "alle Sinnenfreuden zurückweisen, ",
+  "iti95:4.3": "alle Sinnenfreuden aufgeben, ",
   "iti95:4.4": "himmlische und auch menschliche. ",
   "iti95:5.1": "Wenn sie den Strom durchtrennt haben, der an erfreulich scheinende Dinge gebunden ist, ",
   "iti95:5.2": "dem so schwer zu entkommen ist, ",
