Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.4_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.4_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.4_translation-ru-narinyanievmenenko.json
@@ -11,5 +11,5 @@
   "thig6.4:2.4": "И я увидела в Сакете, в лесу Анджана, монастырь. ",
   "thig6.4:3.1": "Узрев Татхагату в монастыре, ",
   "thig6.4:3.2": "Сиянье мира нашего, ",
-  "thig6.4:3.3": "Ему я почести воздав, присела рядом. "
+  "thig6.4:3.3": ""
 }
