Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.4_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.4_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.4_translation-ru-narinyanievmenenko.json
@@ -8,7 +8,7 @@
   "thig6.4:2.1": "Напитки, яства взяв, ",
   "thig6.4:2.2": "",
   "thig6.4:2.3": "",
-  "thig6.4:2.4": "",
+  "thig6.4:2.4": "Мы в парк отправились прелестный, ",
   "thig6.4:3.1": "Играли там, затем вернулись в дом. ",
   "thig6.4:3.2": "",
   "thig6.4:3.3": "И я увидела в Сакете, в лесу Анджана, монастырь. ",
