Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.4_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.4_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.4_translation-ru-narinyanievmenenko.json
@@ -15,5 +15,6 @@
   "thig6.4:4.1": "Сиянье мира нашего, ",
   "thig6.4:4.2": "Ему я почести воздав, присела рядом. ",
   "thig6.4:4.3": "Из сострадания он преподал мне Дхамму, ",
-  "thig6.4:4.4": "Зрячий. "
+  "thig6.4:4.4": "Зрячий. ",
+  "thig6.4:5.1": "Слова Отшельника великого услышав, "
 }
