Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.4_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.4_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.4_translation-ru-narinyanievmenenko.json
@@ -18,5 +18,6 @@
   "thig6.4:4.4": "Зрячий. ",
   "thig6.4:5.1": "Слова Отшельника великого услышав, ",
   "thig6.4:5.2": "Проникла в истину я. ",
-  "thig6.4:5.3": "Познав Дхамму незапылённую, "
+  "thig6.4:5.3": "Познав Дхамму незапылённую, ",
+  "thig6.4:5.4": "Коснулась я Неумирающего. "
 }
