Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.5_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.5_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.5_translation-ru-narinyanievmenenko.json
@@ -6,5 +6,6 @@
   "thig6.5:1.2": "Богатством изобилующей, <j>С имуществом великим. ",
   "thig6.5:1.3": "Сама я дивною красой наделена была, ",
   "thig6.5:1.4": "Дочь Маджи истинная. ",
-  "thig6.5:2.1": "Сыны царей меня алкали, "
+  "thig6.5:2.1": "Сыны царей меня алкали, ",
+  "thig6.5:2.2": "Сыны купцов меня желали, "
 }
