Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.5_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.5_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.5_translation-ru-narinyanievmenenko.json
@@ -10,5 +10,6 @@
   "thig6.5:2.2": "Сыны купцов меня желали, ",
   "thig6.5:2.3": "К отцу посланцев-сватов присылали, ",
   "thig6.5:2.4": "Прося отдать им Анопаму: ",
-  "thig6.5:3.1": "«Какой бы ни была цена "
+  "thig6.5:3.1": "«Какой бы ни была цена ",
+  "thig6.5:3.2": "За дочь твою, за Анопаму, —"
 }
