Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.5_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.5_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.5_translation-ru-narinyanievmenenko.json
@@ -12,5 +12,6 @@
   "thig6.5:2.4": "Прося отдать им Анопаму: ",
   "thig6.5:3.1": "«Какой бы ни была цена ",
   "thig6.5:3.2": "За дочь твою, за Анопаму, —",
-  "thig6.5:3.3": "Я больше в восемь раз отдам "
+  "thig6.5:3.3": "Я больше в восемь раз отдам ",
+  "thig6.5:3.4": "И злата, и камней!» "
 }
