Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.5_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.5_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.5_translation-ru-narinyanievmenenko.json
@@ -16,5 +16,6 @@
   "thig6.5:3.4": "И злата, и камней!» ",
   "thig6.5:4.1": "Но я, узрев Всецело пробуждённого, ",
   "thig6.5:4.2": "Непревзойдённого, Старейшину мира, ",
-  "thig6.5:4.3": "Воздала почести ему, "
+  "thig6.5:4.3": "Воздала почести ему, ",
+  "thig6.5:4.4": "В стороне присела. "
 }
