Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.5_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.5_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig6.5_translation-ru-narinyanievmenenko.json
@@ -23,5 +23,6 @@
   "thig6.5:5.4": "Я коснулась третьего плода. ",
   "thig6.5:6.1": "Я волосы свои остригла ",
   "thig6.5:6.2": "В скитания ушла. ",
-  "thig6.5:6.3": "Сегодня ночь седьмая, "
+  "thig6.5:6.3": "Сегодня ночь седьмая, ",
+  "thig6.5:6.4": "Как жажда высохла во мне. "
 }
