Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn1_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn1_translation-de-sabbamitta.json
@@ -448,7 +448,7 @@
   "dn1:3.2.1": "Sie behaupten: ‚Das Selbst ist nach dem Tod frei von Krankheit und ohne Wahrnehmung, und ist geformt … ",
   "dn1:3.2.2": "und es ist formlos … ",
   "dn1:3.2.3": "und es ist geformt und auch formlos … ",
-  "dn1:3.2.4": "und es besitzt weder Form, noch ist es formlos … ",
+  "dn1:3.2.4": "und es ist weder geformt noch formlos … ",
   "dn1:3.2.5": "und es ist endlich … ",
   "dn1:3.2.6": "und es ist unendlich … ",
   "dn1:3.2.7": "und es ist sowohl endlich als auch unendlich … ",
