Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn60_translation-de-sabbamitta.json
@@ -196,7 +196,7 @@
   "mn60:31.7": "‚Das allein ist die Wahrheit, alles andere ist unnütz.‘ ",
   "mn60:31.8": "Wenn jene Asketen und Brahmanen Recht haben, die sagen, ",
   "mn60:31.9": "es gebe keine vollständig formlosen Meditationszustände, dann ist es möglich, ",
-  "mn60:31.10": "dass ich unfehlbar unter den Göttern wiedergeboren werde, die Form besitzen und geistgeschaffen sind. ",
+  "mn60:31.10": "dass ich unfehlbar unter den Göttern wiedergeboren werde, die geformt und geistgeschaffen sind. ",
   "mn60:31.11": "Wenn jene Asketen und Brahmanen Recht haben, die sagen, ",
   "mn60:31.12": "es gebe vollständig formlose Meditationszustände, dann ist es möglich, ",
   "mn60:31.13": "dass ich unfehlbar unter den Göttern wiedergeboren werde, die formlos und aus Wahrnehmung gebildet sind. ",
