Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn74_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn74_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn74_translation-de-sabbamitta.json
@@ -71,7 +71,7 @@
   "mn74:8.12": "Und wenn es Streit gibt, gibt es Uneinigkeit; wenn es Uneinigkeit gibt, gibt es Qual; wenn es Qual gibt, gibt es Verletzen.‘ ",
   "mn74:8.13": "Und indem er das Potenzial für Streit, Uneinigkeit, Qual und Verletzen in sich selbst erwägt, gibt er diese Ansicht auf, indem er keine andere Ansicht ergreift. ",
   "mn74:8.14": "So gibt man diese Ansichten auf und lässt sie los. ",
-  "mn74:9.1": "Aggivessana, dieser Körper ist von materieller Natur, besteht aus den vier Grundzuständen, wurde von Mutter und Vater gezeugt, mit Reis und Brei aufgebaut und muss vergehen, sich abnutzen und dahinschwinden, muss aufgelöst und zerstört werden. Du sollst ihn als unbeständig betrachten, als Leiden, als Krankheit, als Eiterherd, als Pfeil, als Elend, als Beschwerde, als fremd, als zerfallend, als leer, als ohne Selbst. ",
+  "mn74:9.1": "Aggivessana, dieser Körper ist geformt, besteht aus den vier Grundzuständen, wurde von Mutter und Vater gezeugt, mit Reis und Brei aufgebaut und muss vergehen, sich abnutzen und dahinschwinden, muss aufgelöst und zerstört werden. Du sollst ihn als unbeständig betrachten, als Leiden, als Krankheit, als Eiterherd, als Pfeil, als Elend, als Beschwerde, als fremd, als zerfallend, als leer, als ohne Selbst. ",
   "mn74:9.2": "Wenn du das tust, wirst du Sehnen nach dem Körper, Zuneigung zum Körper und Unterwürfigkeit unter den Körper aufgeben. ",
   "mn74:10.1": "Es gibt drei Gefühle: ",
   "mn74:10.2": "angenehm, schmerzhaft und neutral. ",
