Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn44/sn44.11_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn44/sn44.11_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn44/sn44.11_translation-de-sabbamitta.json
@@ -15,7 +15,7 @@
   "sn44.11:2.5": "„Auch das wurde vom Buddha nicht erklärt.“ ",
   "sn44.11:3.1": "„Herr Kaccāna, wenn du über all diese Punkte befragt wirst, sagst du, dass sie vom Buddha nicht erklärt wurden. ",
   "sn44.11:3.13": "Was ist der Grund, was ist die Ursache, dass das vom Buddha nicht erklärt wurde?“ ",
-  "sn44.11:3.14": "„Um ihn als jemanden zu beschreiben, der Form besitzt oder formlos ist, der Wahrnehmung besitzt oder ohne Wahrnehmung ist oder weder Wahrnehmung besitzt noch ohne Wahrnehmung ist, muss es einen Grund und eine Ursache geben, um das zu tun. Aber wenn dieser Grund und diese Ursache ganz und gar vollständig und restlos aufhören würden, ",
+  "sn44.11:3.14": "„Um ihn als jemanden zu beschreiben, der geformt oder formlos ist, der Wahrnehmung besitzt oder ohne Wahrnehmung ist oder weder Wahrnehmung besitzt noch ohne Wahrnehmung ist, muss es einen Grund und eine Ursache geben, um das zu tun. Aber wenn dieser Grund und diese Ursache ganz und gar vollständig und restlos aufhören würden, ",
   "sn44.11:3.15": "wie könnte man ihn da mit irgendeinem dieser Begriffe beschreiben?“ ",
   "sn44.11:3.16": "„Herr Kaccāna, wie lange ist es her, dass du fortgezogen bist?“ ",
   "sn44.11:3.17": "„Nicht lange, Geehrter: drei Jahre.“ ",
