Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga9/iti86_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga9/iti86_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti86_translation-it-soma.json
@@ -1,6 +1,6 @@
 {
   "iti86:2.1": "Per il cercatore che pratica in accordo con il Dhamma, la via in accordo con il Dhamma è da trovarsi in questa istruzione (esposizione): ",
-  "iti86:2.2": "se si va in accordo con il Dhamma, quando si parla, si parla di Dhamma senza dire Adhamma (cose contrarie al Dhamma), quando si pensa, si pensano pensieri di Dhamma non pensieri di Adhamma. Quando non si parla, ne’ si pensa, si è equanimi, consapevoli e presenti. ",
+  "iti86:2.2": "se si va in accordo con il Dhamma, quando si parla, si parla di Dhamma e non di Adhamma (cose contrarie al Dhamma), quando si pensa, si pensano pensieri di Dhamma non pensieri di Adhamma. Quando non si parla, ne’ si pensa, si è equanimi, consapevoli e presenti. ",
   "iti86:3.1": "Il cercatore che trova piacere e delizia nel Dhamma, ",
   "iti86:3.2": "che riflette sul Dhamma ",
   "iti86:3.3": "e si ricorda il Dhamma, ",
