Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga9/iti87_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga9/iti87_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti87_translation-it-soma.json
@@ -9,7 +9,7 @@
   "iti87:3.3": "Pensieri legati alla rinuncia, ",
   "iti87:3.4": "al non essere ostili (avversi) ",
   "iti87:3.5": "e al non fare del male. ",
-  "iti87:4.1": "Bisogna perseguire tre pensieri benefici ",
+  "iti87:4.1": "Bisogna perseguire i tre pensieri benefici ",
   "iti87:4.2": "e buttare via i tre nocivi. ",
   "iti87:4.3": "Dopo averli vagliati, uno calma i propri pensieri ",
   "iti87:4.4": "come una nube di polvere viene depositata al suolo dall’acqua. ",
