Publishing translations for translation/de/site (#3830)

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -19,7 +19,7 @@
   "ja-name:18.ja15": "Nimm den Esel an ",
   "ja-name:19.ja16": "Der dreifach zusammengebrochene Hirsch ",
   "ja-name:20.ja17": "Sturmwind ",
-  "ja-name:21.ja18": "Speise für Verstorbene ",
+  "ja-name:21.ja18": "Das Festmahl für die Toten ",
   "ja-name:22.ja19": "Ein Opfer, um einen Wunsch zu erfüllen ",
   "ja-name:23.ja20": "Trinkhalme ",
   "ja-name:24.ja-kurungavagga": "Das Kapitel mit der Gazelle ",
