Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga9/iti89_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga9/iti89_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti89_translation-it-soma.json
@@ -2,7 +2,7 @@
   "iti89:2.1": "Cercatori, sopraffatto e ossessionato da tre pratiche contrarie al buon Dhamma, Devadatta è destinato a uno stato di miseria, all’inferno, per un eone e senza possibilità di rimedio. ",
   "iti89:2.2": "Quali tre? ",
   "iti89:2.3": "Desideri malvagi, ",
-  "iti89:2.4": "pessimi amici, ",
+  "iti89:2.4": "amici malvagi, ",
   "iti89:2.5": "e il dichiarare di aver raggiunto la perfezione, pur essendo consapevole di avere ancora altro da coltivare visto l’insignificante risultato interno (dentro di se'). ",
   "iti89:3.1": "Speriamo che non appaia mai nessuno in questo mondo ",
   "iti89:3.2": "con delle pessime aspirazioni. ",
